--- a/mta.yaml
+++ b/mta.yaml
@@ -21,7 +21,7 @@ modules:
  - name: aquasanctum-srv
  # ------------------------------------------------------------
    type: nodejs
-   path: gen/srv
+   path: srv
    parameters:
      buildpack: nodejs_buildpack
    requires:
@@ -36,7 +36,7 @@ modules:
  - name: aquasanctum-db-deployer
  # ------------------------------------------------------------
    type: hdb
-   path: gen/db  
+   path: db  
    parameters:
      buildpack: nodejs_buildpack
    requires:
