--- a/db/package.json
+++ b/db/package.json
@@ -1,14 +1,13 @@
-
-    {
-        "name": "deploy",
-        "dependencies": {
-          "@sap/hdi-deploy": "^4.2.3"
-        },
-        "engines": {
-          "node": "^10"
-        },
-        "scripts": {
-          "start": "node node_modules/@sap/hdi-deploy/deploy.js  --auto-undeploy"
-        }
-      }   
-    
+{
+    "name": "deploy",
+    "engineStrict": true,
+    "dependencies": {
+        "@sap/hdi-deploy": "^4.2.3"
+    },
+    "engines": {
+        "node": "14.X"
+    },
+    "scripts": {
+        "start": "node node_modules/@sap/hdi-deploy/deploy.js  --auto-undeploy"
+    }
+}
