--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "private": true,
     "dependencies": {
         "@sap/cds": "^5",
+        "@sap/cds-odata-v2-adapter-proxy": "^1.8.4",
         "express": "^4",
         "hdb": "^0.18.3"
+    },
+    "engines": {
+        "node": "14.X"
     },
     "scripts": {
         "start": "cds run"
@@ -50,5 +54,8 @@
         "build": {
             "target": "."
         }
+    },
+    "devDependencies": {
+        "@sap/hdi-deploy": "^4.2.3"
     }
 }
